[gd_scene load_steps=3 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://libs/stigmark.gdns" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 21.0
margin_top = 12.0
margin_right = 794.0
margin_bottom = 36.0
placeholder_text = "keyword to search"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 810.0
margin_top = 12.0
margin_right = 871.0
margin_bottom = 36.0
text = "Search"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAsync" type="Button" parent="."]
margin_left = 891.0
margin_top = 12.0
margin_right = 995.0
margin_bottom = 36.0
text = "Search Async"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 21.0
margin_top = 54.0
margin_right = 995.0
margin_bottom = 580.0
readonly = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stigmark" type="Node" parent="."]
script = ExtResource( 2 )

[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ButtonAsync" to="." method="_on_ButtonAsync_pressed"]
